# databricks_demos

./: .gitignore  CLAUDE.md
Benchmarking LLMs/: azure-gpt-4.1-benchmarking.ipynb  llama-3.2-3b-pt-benchmarking.ipynb
Cohere Embedding Vector Search/: 00-introduction.ipynb  00-introduction.py  01-load-data.ipynb  01-load-data.py  02-prepare-text-chunks.ipynb  02-prepare-text-chunks.py  03-create-vector-store-index.ipynb  03-create-vector-store-index.py  04-semantic-search.ipynb  04-semantic-search.py  README.md
MLB GUMBO E2E/: 00-ddl.py  01-imports.py  02-data-validation.py  02-reset-data.py  03-ingest-mlb-gumbo.py  04-transform-game-data.py  04a-ingest-to-bronze.ipynb  05-transform-pitch-data.py  05a-transform-game-data.py  05b-transform-pitch-data.py  06-predict-pitch-data.py  06a-generate-training-data.ipynb  06b-predict-pitch-data.py  07-validate-data.ipynb  08-external-access.ipynb  09-external-access-spark.ipynb  Game Report MV.dbquery.ipynb
MLB Unified Data Layer with Iceberg/: README.md  baseball_iceberg_crud_demo.ipynb  external_client_crud.ipynb
Operationalizing ML Across Clouds with Delta Sharing/: 00-data-preparation.ipynb  01-automl-training.ipynb  02-delta-sharing-uc.ipynb  03-accept-share-and-adhoc-inference.ipynb  04-deploy-model-serving.ipynb  05-ab-testing.ipynb  README.md
Smarter Scouting for the 2025 MLB Draft/: 01-load-data.ipynb  02a-transform-data-draft-prospects.ipynb  03-create-vector-store-index.ipynb  (+3 more)
github-actions-wheel-deploy/my_utils/: pyproject.toml
github-actions-wheel-deploy/my_utils/my_utils/: __init__.py  transforms.py
(+341 files in other folders)
