[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_utils"
version = "0.1.0"
description = "Internal utilities for data pipelines on Databricks"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
